--- a/index.html
+++ b/index.html
@@ -21,40 +21,70 @@
         <div class="card mt-5 mb-5">
           <div class="card-body text-center">
             <h2>Loan Calculator</h2>
+            <div class="error-container">
+              <!-- Error alert -->
+            </div>
             <form id="loan-form">
               <div class="form-group">
                 <div class="input-group mt-4 mb-3">
                   <div class="input-group-prepend">
-                    <span class="input-group-text" id="sterling">£</span>
+                    <span class="input-group-text">£</span>
                   </div>
-                  <input type="text" class="form-control" placeholder="Loan Amount">
+                  <input type="number" class="form-control shadow-none" placeholder="Loan Amount" id="loan-amount" required>
                 </div>
               </div>
               <div class="form-group">
                 <div class="input-group mt-4 mb-3">
                   <div class="input-group-prepend">
-                    <span class="input-group-text" id="percent">%</span>
+                    <span class="input-group-text">%</span>
                   </div>
-                  <input type="text" class="form-control" placeholder="Annual Interest">
+                  <input type="number" class="form-control shadow-none" placeholder="Annual Interest" id="interest-amount" required>
                 </div>
               </div>
               <div class="form-group">
                 <div class="input-group mt-4 mb-3">
-                  <input type="text" class="form-control" placeholder="Loan Term Duration">
+                  <input type="number" class="form-control shadow-none" placeholder="Loan Term Duration" id="term-duration" required>
                   <div class="input-group-append">
-                    <span class="input-group-text" id="term">Years</span>
+                    <span class="input-group-text">Years</span>
                   </div>
                 </div>
               </div>
               <div class="form-group">
-                <button type="submit" class="btn btn-dark btn-block mt-4 text-uppercase">Calculate</button>
+                <button type="submit" class="btn btn-dark btn-block mt-4 text-uppercase shadow-none" id="calculate">Calculate</button>
               </div>
             </form>
+            <div class="results pt-4 pb-4">
+              <div class="row">
+                <div class="col-lg-12 mt-2 mb-2">
+                  <p class="mb-0">Monthly Payments</p>
+                  <span id="monthly-payments">
+                    <!-- Dynamically calculated in JS -->
+                  </span>
+                </div>
+                <div class="col-lg-12 mt-2 mb-2">
+                  <p class="mb-0">Total Payment</p>
+                  <span id="total-payment">
+                    <!-- Dynamically calculated in JS -->
+                  </span>
+                </div>
+                <div class="col-lg-12 mt-2 mb-2">
+                  <p class="mb-0">Total Interest</p>
+                  <span id="total-interest">
+                    <!-- Dynamically calculated in JS -->
+                  </span>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
 
+  <!-- Bootstrap JS CDNs -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+  <script src="../app.js"></script>
 </body>
 </html>
